[package]
name = "wiki-tree"
version = "0.1.0"
authors = ["Murtaza-arif <murtazaarif2k16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json","blocking"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
regex = "1"
error-chain = "0.12.4"
select = "0.5.0"
futures = "0.3.6"